--- a/index.html
+++ b/index.html
@@ -6,19 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web page</title>
+    <style>
+        body{
+            padding:1rem;
+            margin: 1rem;
+            font-size: 1000;
+        }
+
+        p{
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            font-size: 2em;
+        }
+
+        div{
+            color:red;
+            font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        }
+    </style>
 
 </head>
 
 <body>
 
-    <!-- italic text -->
-    <p>This is an <i>italic Text</i></p>
+    
 
-    <!-- bold text -->
-    <p>This is a <b>Bold Text</b></p>
-
-    <!-- underline Text -->
-    <p>This is an <u>Underline text</u></p>
 
 </body>
 
